--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "composer-plugin-api": "^1.1",
-        "phx/phx": "dev-composer-2nd-try"
+        "phx/phx": "dev-master"
     },
     "require-dev": {
         "composer/composer": "^1.5.0"
