--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,7 @@
     "prefer-stable": true,
     "require": {
         "composer-plugin-api": "^1.1",
-        "phxlang/phx": "^1.0.0"
-    },
-    "require-dev": {
+        "phxlang/phx": "^1.0.0",
         "composer/composer": "^1.5.0"
     },
     "autoload": {
